assets/style.scss
html, body {
	background: #333333;
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	color: #eeeeee;
}


clock {
	display: block;
	position: relative;
	background: #8A888A;
	width: 10rem;
	height: 10rem;
	border-radius: 50%;

	&::after, &::before {
		content: "";
		position: absolute;
		width: 100%;
		height: 100%;
		top: 0;
		left: 0;
	}
	&::before {
		background-image: url("images/hand-hrs.svg");
	}
	&::after {
		background-image: url("images/hand-mins.svg");
	}

	@for $h from 0 to 12 {
		&.hour-#{$h}::before {
			transform: rotate(calc(360deg / 12 * #{$h}));
		}
	}
	@for $m from 0 to 60 {
		&.minute-#{$m}::after {
			transform: rotate(calc(360deg / 60 * #{$m}));
		}
	}

	&.focus {
		background: #eeeeee;

		&::after, &::before {
			filter: brightness(0);
		}
	}
}

#clock-container {
	display: grid;
	grid-template-columns: repeat(auto-fill, 5rem);
	grid-template-rows: repeat(auto-fit, 10rem);
	grid-gap: 1rem;
	padding: 2rem;
	grid-template-areas:
		"c678 c678 c546 c546 c236 c236 c245 c245 c172 c172 c420 c420 c438 c438 c484 c484 c720 c720 c88 c88 . "
		". c133 c133 c248 c248 c25 c25 c564 c564 c691 c691 c537 c537 c539 c539 c584 c584 c207 c207 c448 c448 "
		"c690 c690 c526 c526 c12 c12 c318 c318 c123 c123 c215 c215 c170 c170 c579 c579 c637 c637 c1 c1 . "
		". c381 c381 c146 c146 c427 c427 c49 c49 c206 c206 c640 c640 c108 c108 c415 c415 c320 c320 c577 c577 "
		"c356 c356 c188 c188 c451 c451 c667 c667 c222 c222 c425 c425 c271 c271 c242 c242 c613 c613 c419 c419 . "
		". c99 c99 c417 c417 c648 c648 c47 c47 c311 c311 c107 c107 c670 c670 c161 c161 c184 c184 c243 c243 "
		"c399 c399 c582 c582 c477 c477 c342 c342 c210 c210 c301 c301 c293 c293 c534 c534 c591 c591 c204 c204 . "
		". c174 c174 c386 c386 c165 c165 c414 c414 c158 c158 c41 c41 c336 c336 c527 c527 c407 c407 c348 c348 "
		"c308 c308 c291 c291 c360 c360 c586 c586 c36 c36 c317 c317 c361 c361 c590 c590 c34 c34 c294 c294 . "
		". c9 c9 c651 c651 c217 c217 c283 c283 c181 c181 c302 c302 c620 c620 c58 c58 c87 c87 c366 c366 "
		"c211 c211 c362 c362 c166 c166 c428 c428 c30 c30 c84 c84 c163 c163 c110 c110 c68 c68 c635 c635 . "
		". c23 c23 c153 c153 c277 c277 c482 c482 c231 c231 c130 c130 c338 c338 c716 c716 c312 c312 c162 c162 "
		"c666 c666 c392 c392 c223 c223 c175 c175 c634 c634 c192 c192 c599 c599 c344 c344 c62 c62 c516 c516 . "
		". c90 c90 c508 c508 c643 c643 c439 c439 c347 c347 c624 c624 c636 c636 c198 c198 c625 c625 c659 c659 "
		"c594 c594 c483 c483 c622 c622 c540 c540 c507 c507 c341 c341 c324 c324 c412 c412 c566 c566 c604 c604 . "
		". c319 c319 c272 c272 c331 c331 c423 c423 c679 c679 c633 c633 c398 c398 c376 c376 c382 c382 c367 c367 "
		"c573 c573 c603 c603 c443 c443 c139 c139 c132 c132 c322 c322 c35 c35 c563 c563 c203 c203 c63 c63 . "
		". c485 c485 c288 c288 c510 c510 c225 c225 c358 c358 c240 c240 c618 c618 c657 c657 c549 c549 c446 c446 "
		"c149 c149 c31 c31 c487 c487 c615 c615 c147 c147 c103 c103 c202 c202 c686 c686 c409 c409 c156 c156 . "
		". c86 c86 c404 c404 c51 c51 c638 c638 c560 c560 c456 c456 c167 c167 c33 c33 c380 c380 c445 c445 "
		"c717 c717 c698 c698 c196 c196 c10 c10 c82 c82 c525 c525 c351 c351 c403 c403 c611 c611 c422 c422 . "
		". c287 c287 c495 c495 c418 c418 c201 c201 c134 c134 c614 c614 c205 c205 c528 c528 c662 c662 c186 c186 "
		"c489 c489 c6 c6 c474 c474 c369 c369 c57 c57 c434 c434 c598 c598 c535 c535 c585 c585 c503 c503 . "
		". c329 c329 c542 c542 c80 c80 c42 c42 c523 c523 c430 c430 c141 c141 c567 c567 c297 c297 c524 c524 "
		"c709 c709 c596 c596 c113 c113 c116 c116 c621 c621 c46 c46 c574 c574 c435 c435 c452 c452 c436 c436 . "
		". c73 c73 c4 c4 c692 c692 c56 c56 c195 c195 c53 c53 c677 c677 c19 c19 c689 c689 c533 c533 "
		"c387 c387 c642 c642 c180 c180 c218 c218 c593 c593 c554 c554 c28 c28 c199 c199 c8 c8 c327 c327 . "
		". c627 c627 c499 c499 c519 c519 c379 c379 c313 c313 c197 c197 c551 c551 c321 c321 c685 c685 c213 c213 "
		"c337 c337 c224 c224 c298 c298 c493 c493 c571 c571 c402 c402 c668 c668 c65 c65 c15 c15 c658 c658 . "
		". c144 c144 c72 c72 c453 c453 c237 c237 c719 c719 c78 c78 c371 c371 c296 c296 c256 c256 c660 c660 "
		"c612 c612 c177 c177 c142 c142 c505 c505 c339 c339 c377 c377 c610 c610 c673 c673 c572 c572 c260 c260 . "
		". c109 c109 c469 c469 c276 c276 c352 c352 c383 c383 c581 c581 c98 c98 c695 c695 c257 c257 c3 c3 "
		"c328 c328 c37 c37 c119 c119 c131 c131 c555 c555 c76 c76 c597 c597 c671 c671 c127 c127 c281 c281 . "
		". c191 c191 c16 c16 c531 c531 c561 c561 c83 c83 c589 c589 c79 c79 c470 c470 c357 c357 c230 c230 "
		"c7 c7 c305 c305 c652 c652 c701 c701 c128 c128 c681 c681 c235 c235 c355 c355 c370 c370 c682 c682 . "
		". c187 c187 c169 c169 c27 c27 c497 c497 c680 c680 c77 c77 c129 c129 c226 c226 c498 c498 c600 c600 "
		"c468 c468 c492 c492 c125 c125 c285 c285 c373 c373 c494 c494 c460 c460 c628 c628 c486 c486 c111 c111 . "
		". c354 c354 c609 c609 c13 c13 c696 c696 c330 c330 c711 c711 c440 c440 c280 c280 c252 c252 c43 c43 "
		"c168 c168 c473 c473 c145 c145 c104 c104 c39 c39 c688 c688 c616 c616 c661 c661 c209 c209 c454 c454 . "
		". c512 c512 c238 c238 c663 c663 c24 c24 c557 c557 c268 c268 c85 c85 c501 c501 c538 c538 c602 c602 "
		"c641 c641 c513 c513 c559 c559 c74 c74 c545 c545 c465 c465 c148 c148 c29 c29 c394 c394 c227 c227 . "
		". c229 c229 c475 c475 c556 c556 c506 c506 c669 c669 c101 c101 c349 c349 c478 c478 c232 c232 c463 c463 "
		"c258 c258 c700 c700 c480 c480 c289 c289 c334 c334 c118 c118 c575 c575 c164 c164 c267 c267 c408 c408 . "
		". c306 c306 c295 c295 c140 c140 c26 c26 c396 c396 c647 c647 c135 c135 c97 c97 c61 c61 c588 c588 "
		"c17 c17 c514 c514 c55 c55 c183 c183 c518 c518 c155 c155 c388 c388 c631 c631 c442 c442 c458 c458 . "
		". c189 c189 c64 c64 c541 c541 c255 c255 c2 c2 c75 c75 c706 c706 c91 c91 c299 c299 c385 c385 "
		"c550 c550 c286 c286 c44 c44 c462 c462 c450 c450 c481 c481 c95 c95 c629 c629 c274 c274 c595 c595 . "
		". c565 c565 c250 c250 c511 c511 c269 c269 c576 c576 c54 c54 c282 c282 c279 c279 c182 c182 c190 c190 "
		"c220 c220 c270 c270 c500 c500 c20 c20 c315 c315 c365 c365 c467 c467 c333 c333 c683 c683 c244 c244 . "
		". c406 c406 c544 c544 c630 c630 c441 c441 c292 c292 c66 c66 c644 c644 c92 c92 c152 c152 c645 c645 "
		"c178 c178 c653 c653 c194 c194 c704 c704 c126 c126 c117 c117 c364 c364 c363 c363 c372 c372 c705 c705 . "
		". c530 c530 c60 c60 c239 c239 c601 c601 c553 c553 c578 c578 c703 c703 c314 c314 c606 c606 c52 c52 "
		"c50 c50 c490 c490 c431 c431 c583 c583 c592 c592 c332 c332 c710 c710 c397 c397 c359 c359 c464 c464 . "
		". c200 c200 c479 c479 c626 c626 c433 c433 c694 c694 c654 c654 c646 c646 c395 c395 c343 c343 c143 c143 "
		"c520 c520 c228 c228 c21 c21 c389 c389 c617 c617 c384 c384 c547 c547 c345 c345 c350 c350 c212 c212 . "
		". c569 c569 c713 c713 c472 c472 c249 c249 c14 c14 c449 c449 c100 c100 c718 c718 c262 c262 c664 c664 "
		"c264 c264 c426 c426 c461 c461 c353 c353 c390 c390 c655 c655 c193 c193 c246 c246 c529 c529 c548 c548 . "
		". c504 c504 c521 c521 c122 c122 c496 c496 c429 c429 c632 c632 c154 c154 c81 c81 c253 c253 c254 c254 "
		"c708 c708 c114 c114 c325 c325 c176 c176 c69 c69 c605 c605 c219 c219 c32 c32 c587 c587 c335 c335 . "
		". c410 c410 c59 c59 c391 c391 c303 c303 c687 c687 c455 c455 c216 c216 c173 c173 c699 c699 c157 c157 "
		"c112 c112 c93 c93 c619 c619 c241 c241 c94 c94 c22 c22 c124 c124 c457 c457 c208 c208 c278 c278 . "
		". c656 c656 c115 c115 c221 c221 c275 c275 c96 c96 c138 c138 c374 c374 c411 c411 c310 c310 c607 c607 "
		"c106 c106 c323 c323 c697 c697 c552 c552 c515 c515 c650 c650 c261 c261 c562 c562 c120 c120 c70 c70 . "
		". c532 c532 c5 c5 c432 c432 c185 c185 c121 c121 c471 c471 c447 c447 c45 c45 c266 c266 c714 c714 "
		"c284 c284 c340 c340 c444 c444 c665 c665 c413 c413 c171 c171 c684 c684 c105 c105 c608 c608 c102 c102 . "
		". c137 c137 c234 c234 c11 c11 c263 c263 c346 c346 c502 c502 c89 c89 c160 c160 c693 c693 c570 c570 "
		"c517 c517 c672 c672 c639 c639 c273 c273 c67 c67 c401 c401 c580 c580 c416 c416 c437 c437 c466 c466 . "
		". c40 c40 c265 c265 c421 c421 c307 c307 c488 c488 c459 c459 c38 c38 c179 c179 c536 c536 c623 c623 "
		"c247 c247 c326 c326 c233 c233 c136 c136 c18 c18 c675 c675 c522 c522 c309 c309 c543 c543 c368 c368 . "
		". c300 c300 c71 c71 c375 c375 c491 c491 c715 c715 c150 c150 c214 c214 c151 c151 c251 c251 c316 c316 "
		"c707 c707 c159 c159 c400 c400 c290 c290 c378 c378 c676 c676 c259 c259 c509 c509 c424 c424 c558 c558 . "
		". c405 c405 c568 c568 c649 c649 c48 c48 c393 c393 c304 c304 c702 c702 c674 c674 c712 c712 c476 c476 ";

	clock {
		@for $i from 1 to 721 {
			&#clock#{$i} {
				grid-area: c#{$i};
			}
		}
	}
}

